# wasm-cli-calculator

./: .gitattributes  .gitignore  LICENSE  README.md  build.sh
adder/: Cargo.toml
adder/src/: bindings.rs  lib.rs
app/: Cargo.toml
app/src/: bindings.rs  main.rs
calculator/: Cargo.toml
calculator/src/: bindings.rs  lib.rs
cli-app/: Cargo.toml
cli-app/src/: main.rs
subtractor/: Cargo.toml
subtractor/src/: bindings.rs  lib.rs
wasi-cli-command/: Cargo.toml  README.md
wasi-cli-command/src/: main.rs
wit/: adder.wit  calculator.wit  common.wit  subtractor.wit
