[package]
name = "adder"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.19.2", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.component]
package = "calc:basic"

[package.metadata.component.target]
path = "../wit"
world = "adder"

[package.metadata.component.dependencies]
