[package]
name = "subtractor"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[package.metadata.component]
package = "docs:subtractor"

[package.metadata.component.target]
path = "../wit/calculator.wit"
world = "subtractor"

[package.metadata.component.dependencies]
