[package]
name = "wasi-cli-command"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen = { version = "0.18.0", default-features = false, features = ["realloc"] }

[profile.release]
lto = true

[package.metadata.component]
package = "calc:basic"

[package.metadata.component.target]
path = "../wit"
world = "app"

[package.metadata.component.dependencies]
